--- a/news.html
+++ b/news.html
@@ -44,3 +44,8 @@ subtitle: News
   {% endif %}
 </ul>
 {% endif %}
+<script src="/js/jquery.min.js"></script>
+{% include buttons.html %}
+</body>
+</html>
+
